# PC-AI

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .rgignore  AGENTS.md  ARCHITECTURE.md  Build.ps1  CHAT.md  CI-CD-GUIDE.md  CI-CD-SETUP-SUMMARY.md  CLAUDE.md  CODE_SIGN.md  CSharp_RustDLL.md  DIAGNOSE.md  DIAGNOSE_LOGIC.md  GEMINI.md  Get-PcDiagnostics.ps1  LICENSE  PC-AI.ps1  PSScriptAnalyzerSettings.psd1  README-TEMPLATE.md  README.md  Run-PesterTests.ps1  Setup-DevEnvironment.ps1  TODO.md  Test-NativeInference.ps1  diagnose-dll.ps1  errors.txt  sgconfig.yml
.cargo/: config.toml
.github/: copilot-instructions.md
.pcai/: .gitkeep
.serena/: memories.db
Config/: DIAGNOSE_TEMPLATE.json  PROJECT_CONTEXT.md  diagnostic-thresholds.json  hvsock-proxy.conf  llm-config.json  pcai-tools.json  project-context.json  settings.json  vsock-bridges.conf
Deploy/functiongemma-finetune/: .dockerignore  Dockerfile  README.md  TASK4_IMPLEMENTATION_SUMMARY.md  config.py  download_model.py  eval_harness.py  generate_training_data.py  memory_profiler.py  monitor_training.ps1  prepare_dataset.py  pyproject.toml  pytest.ini  requirements.txt  run_training_docker.ps1  schema_utils.py  test_config.py  test_memory_profiler.py  test_train.py  tool_router.py  train_functiongemma.py  verify_implementation.py
Deploy/functiongemma-finetune/tests/: conftest.py  test_e2e_tool_router.py  test_functional_pcai_tools.py  test_integration_vllm.py  test_unit_dataset.py  test_unit_schema.py  test_unit_training_data.py
Deploy/pcai-inference/: BUILD_REQUIREMENTS.md  CMakePresets.json  Cargo.toml  MISTRALRS_BACKEND.md  README.md  build-llamacpp-clean.ps1  build-llamacpp-direct.ps1  build-llamacpp-fixed.ps1  build.ps1  check-env.ps1  check-llama-builds.ps1  clean-llama-cache.ps1  find-rc.ps1  test-cmake-direct.ps1
Deploy/pcai-inference/cmake/: toolchain-msvc.cmake
Deploy/pcai-inference/src/: lib.rs  main.rs
Deploy/pcai-inference/src/backends/: llamacpp.rs  mistralrs.rs  mod.rs
Deploy/pcai-inference/src/ffi/: mod.rs
Deploy/pcai-inference/src/http/: mod.rs
Deploy/pcai-inference/tests/: README.md  backend_selection_test.rs  integration_test.rs
Deploy/pcai-inference/tests/ffi/: concurrent_access.rs  error_propagation.rs  memory_safety.rs  mod.rs
Deploy/rust-functiongemma/: Cargo.toml  README.md  TOOLS.md  build.ps1  test.ps1
Deploy/rust-functiongemma-runtime/: Cargo.toml  README.md
Deploy/rust-functiongemma-runtime/src/: lib.rs  main.rs  model_support.rs
Deploy/rust-functiongemma-runtime/tests/: http_router.rs
Deploy/rust-functiongemma-train/: Cargo.toml  README.md  TODO.md
Deploy/rust-functiongemma-train/data/: legacy_python_train.jsonl  training_data.jsonl
Deploy/rust-functiongemma-train/examples/: checkpoint_usage.md  scenarios.json
Deploy/rust-functiongemma-train/src/: checkpoint.rs  data_gen.rs  dataset.rs  early_stopping.rs  eval.rs  lib.rs  main.rs  model.rs  router_dataset.rs  scheduler.rs  schema_utils.rs  trainer.rs
Deploy/rust-functiongemma-train/tests/: checkpoint_test.rs  full_training_test.rs  integration_test.rs  lora_test.rs  peft_output_test.rs  router_dataset.rs  trainer_lora_test.rs
Legacy/: README.md  create-startup-task.ps1  docker-wsl-startup.bat  install-bridges.sh  wsl-docker-health-check.ps1  wsl-vsock-bridge-configured.sh
Modules/: PcaiInference.psd1  (+1 more)
Native/NukeNul/nuker_core/: BUILD.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PLATFORM_CONSIDERATIONS.md  QUICKSTART.md  README.md  build.ps1
Native/NukeNul/nuker_core/src/: lib.rs
Native/pcai_core/: Cargo.toml  build_errors.txt  build_errors_2.txt  build_errors_3.txt
Native/pcai_core/pcai_core_lib/: Cargo.toml  build.rs  build_output.txt  errors.txt  verbose_errors.txt
Native/pcai_core/pcai_core_lib/src/: error.rs  functiongemma.rs  hash.rs  json.rs  lib.rs  path.rs  prompt_engine.rs  result.rs  search.rs  string.rs  system.rs  telemetry.rs  tokenizer.rs  vmm_health.rs
Native/pcai_core/pcai_core_lib/src/fs/: mod.rs  ops.rs
Native/pcai_core/pcai_core_lib/src/performance/: disk.rs  memory.rs  mod.rs  process.rs
Native/pcai_core/pcai_core_lib/src/search/: content.rs  duplicates.rs  files.rs  mod.rs  walker.rs
Native/pcai_core/pcai_core_lib/src/system/: logs.rs  mod.rs  path.rs
Native/pcai_core/pcai_core_lib/src/telemetry/: device_codes.rs  disk_health.rs  event_log.rs  mod.rs  network.rs  pnp.rs  process.rs  usb.rs  usb_codes.rs
Native/pcai_core/pcai_fs/: Cargo.toml
Native/pcai_core/pcai_fs/src/: lib.rs  ops.rs
Native/pcai_core/pcai_fs/tests/: ffi_test.rs
Native/pcai_core/pcai_inference/: BUILD_REQUIREMENTS.md  Cargo.toml  FFI_IMPLEMENTATION.md  Invoke-PcaiBuild.ps1  MISTRALRS_BACKEND.md  README.md  build-config.json  build.rs  build_output.txt  cargo_stdout.json  test-cmake-direct.ps1  test-cmake.ps1
Native/pcai_core/pcai_inference/.cargo/: config.toml
Native/pcai_core/pcai_inference/cmake/: toolchain-msvc.cmake
Native/pcai_core/pcai_inference/examples/: powershell_ffi.ps1
Native/pcai_core/pcai_inference/src/: config.rs  lib.rs  version.rs
Native/pcai_core/pcai_inference/src/backends/: mistralrs.rs  mod.rs
Native/pcai_core/pcai_inference/src/http/: mod.rs
Native/pcai_core/pcai_inference/tests/: ffi_tests.rs  integration_test.rs
Native/pcai_core/pcai_inference/tests/common/: mod.rs
Native/pcai_core/pcai_inference/tests/ffi/: memory_safety.rs
Native/pcai_core/pcai_performance/: Cargo.toml
Native/pcai_core/pcai_performance/src/: disk.rs  lib.rs  memory.rs  process.rs
Native/pcai_core/pcai_router/: Cargo.toml
Native/pcai_core/pcai_search/: Cargo.toml
Native/pcai_core/pcai_search/src/: content.rs  duplicates.rs  files.rs  lib.rs  walker.rs
Native/pcai_core/pcai_system/: Cargo.toml
Native/pcai_core/pcai_system/src/: lib.rs  logs.rs  path.rs
Native/pcai_core/rust-functiongemma-train/: README.md  rust_train_data.jsonl
Native/pcai_core/rust-functiongemma-train/src/: lora.rs  main.rs  scheduler.rs  schema_utils.rs
Native/pcai_core/rust-functiongemma-train/tests/: early_stopping_test.rs  full_training_test.rs  scheduler_test.rs
(+380 files in other folders)
