[project]
name = "pcai-functiongemma-finetune"
version = "0.1.0"
description = "Local fine-tuning and eval harness for FunctionGemma in PC_AI"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Proprietary" }
dependencies = [
  # Core ML/Training
  "accelerate>=1.2.0",
  "transformers>=4.47.0",
  "datasets>=3.2.0",
  "peft>=0.14.0",
  "trl>=0.12.0",
  "bitsandbytes>=0.45.0",
  "sentencepiece>=0.2.0",
  "torch>=2.5.0",
  # Evaluation & Monitoring
  "evaluate>=0.4.3",
  "tensorboard>=2.18.0",
  "psutil>=6.1.0",
  # Serialization - CVE-2025-4565 fix requires >=6.31.1
  "protobuf>=6.31.1",
  # API & Data
  "huggingface_hub>=0.27.0",
  "pydantic>=2.10.0",
  "httpx>=0.28.0",
  "orjson>=3.10.12",
  "tqdm>=4.67.0",
  # Testing
  "pytest>=8.3.0",
]

[tool.uv]
resolution = "highest"
