[package]
name = "rust-functiongemma-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_functiongemma_runtime"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Optional model/runtime dependencies (enable with --features model)
minijinja = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
safetensors = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
rust-functiongemma-train = { workspace = true, optional = true }

[features]
default = []
model = [
  "minijinja",
  "tokenizers",
  "hf-hub",
  "safetensors",
  "candle-core",
  "candle-nn",
  "rust-functiongemma-train"
]

[dev-dependencies]
reqwest.workspace = true
