[package]
name = "rust-functiongemma-train"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
candle-core = { version = "0.9.2", features = ["cuda"] }
candle-nn = { version = "0.9.2", features = ["cuda"] }
candle-transformers = { version = "0.9.2", features = ["cuda"] }
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
itertools = "0.14.0"
tokenizers = { version = "0.22.2", default-features = false, features = ["fancy-regex"] }
rand = "0.8.5"
memmap2 = "0.9.5"

[dev-dependencies]
tempfile = "3.10.1"
