[workspace]
resolver = "2"

members = [
    "../rust-functiongemma-runtime",
    "../rust-functiongemma-train",
]

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.7"
tokio = { version = "1.41", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
minijinja = "2"
tokenizers = { version = "0.22.2", default-features = false, features = ["fancy-regex"] }
hf-hub = "0.3"
safetensors = "0.4"
candle-core = { version = "0.9.2", features = ["cuda"] }
candle-nn = { version = "0.9.2", features = ["cuda"] }
candle-transformers = { version = "0.9.2", features = ["cuda"] }
clap = { version = "4.5.23", features = ["derive"] }
itertools = "0.14.0"
rand = "0.8.5"
memmap2 = "0.9.5"
reqwest = { version = "0.12", features = ["json"] }
rust-functiongemma-train = { path = "../rust-functiongemma-train" }
