# PC_AI Native Core - Rust Workspace
# High-performance native libraries for PC diagnostics and optimization

[workspace]
resolver = "2"
members = ["pcai_core_lib"]

[workspace.package]
version = "0.1.0"
authors = ["David Martel"]
edition = "2021"
license = "MIT"
repository = "https://github.com/david-t-martel/PC_AI"

[workspace.dependencies]
# FFI and C interop
libc = "0.2"

# Parallel processing
rayon = "1.10"

# High-performance file walking (ripgrep's engine)
ignore = "0.4"

# SHA-256 hashing
sha2 = "0.10"

# Glob pattern matching
globset = "0.4"

# Regular expressions
regex = "1.11"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Windows API bindings (updated from 0.59 to 0.61)
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
] }

# UTF-16 strings for Windows APIs
widestring = "1.1"

# System information (cross-platform) - updated from 0.32 to 0.38
sysinfo = "0.38"

# Directory walking
walkdir = "2.5"

# Concurrency primitives
parking_lot = "0.12"

# Windows Registry access (updated from 0.52 to 0.55)
winreg = "0.55"

# New dependencies from consolidation
path-slash = "0.2"
dunce = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"
hex = "0.4"
memmap2 = "0.9"
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3      # Maximum optimization
lto = false        # Disable LTO for faster troubleshooting
codegen-units = 16 # Parallelize for faster build
strip = false      # Keep symbols for verification
panic = "abort"    # Smaller binary, faster panics
