[package]
name = "nuker_core"
version = "0.1.0"
edition = "2021"
authors = ["David Martel"]
description = "High-performance Rust DLL for deleting Windows reserved filename files"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# High-performance parallel file walker (ripgrep's engine)
ignore = "0.4"

# UTF-16 string conversion for Windows APIs
widestring = "1.1"

# Windows API bindings for DeleteFileW
windows-sys = { version = "0.52", features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
] }

# C FFI types
libc = "0.2"

[profile.release]
# Aggressive optimizations for maximum performance
opt-level = 3           # Maximum optimization
lto = "fat"             # Full link-time optimization
codegen-units = 1       # Better optimization at cost of compile time
strip = true            # Strip symbols for smaller binary
panic = "abort"         # Smaller binary, faster panics

[profile.release-memory-optimized]
inherits = "release"
opt-level = "z"         # Optimize for size
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
