[package]
name = "pcai_fs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pcai_core_lib = { path = "../pcai_core_lib" }
rayon = "1.10"
ignore = "0.4"
walkdir = "2.5"
log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11"
memmap2 = "0.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
tempfile = "3"
