[package]
name = "pcai_performance"
version = "0.1.0"
edition = "2021"
description = "High-performance disk usage and process monitoring via FFI"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pcai_core_lib = { path = "../pcai_core_lib" }
sysinfo = "0.32"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.14"
