# PC_AI Search Module
# High-performance file search, duplicate detection, and content search

[package]
name = "pcai_search"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance search operations for PC_AI"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core library for shared types
pcai_core_lib = { path = "../pcai_core_lib" }

# FFI and C interop
libc.workspace = true

# Parallel processing
rayon.workspace = true

# High-performance file walking (ripgrep's engine)
ignore.workspace = true

# SHA-256 hashing for duplicate detection
sha2.workspace = true

# Glob pattern matching
globset.workspace = true

# Regular expressions for content search
regex.workspace = true

# JSON serialization
serde.workspace = true
serde_json.workspace = true

# Directory walking
walkdir.workspace = true

# CPU count for parallel processing
num_cpus = "1.16"

# Cross-platform path normalization
dunce = "1.0"        # Removes \\?\ prefix on Windows
path-slash = "0.2"   # Convert between / and \ path separators

[dev-dependencies]
tempfile = "3.12"
