[package]
name = "pcai_system"
version = "0.1.0"
edition = "2021"
description = "System module for PC_AI - PATH analysis and log searching"
authors = ["David Martel"]

[lib]
crate-type = ["cdylib"]

[dependencies]
pcai_core_lib = { path = "../pcai_core_lib" }

# Pattern matching (reused from pcai_search)
regex = "1.11"
globset = "0.4"

# Parallel processing
rayon = "1.10"
parking_lot = "0.12"

# File walking (reused from pcai_search)
walkdir = "2.5"
ignore = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Environment",
] }
winreg = "0.52"

[dev-dependencies]
tempfile = "3.14"
